# Proyecto_ML_BBK_BootcampDS

./: README.md  pyproject.toml
app/: Untitled-1.ipynb  app.py  app_cli.py  fast_app.py
data/: all_us_zipcodes.csv
data/samples/: synthetic_sample.csv
docs/: Presentacion_DS.md  Presentacion_Negocio.md  Proyecto final de Machine Learning.pptx  ds.pptx  memoria.md  negocio.pptx
models/: model_config.yaml
notebooks/: Entrenamiento_Evaluacion.ipynb  Fuentes.ipynb  LimpiezaEDA.ipynb
notebooks/data/samples/: quick_sample.csv
notebooks/models/: best_scored_with_cost.csv  model_comparison.csv  trained_model.pkl
notebooks/models/model_zoo/: MODEL_REGISTRY.json  MODEL_REGISTRY.yaml  best_linsvm.pkl  best_reg_log.pkl  best_svm.pkl  cv_results_linsvm.csv  cv_results_rand_forest.csv  cv_results_reg_log.csv  cv_results_svm.csv  gridsearch_linsvm.pkl  gridsearch_reg_log.pkl  gridsearch_svm.pkl  linsvm_meta.yaml  rand_forest_meta.yaml  reg_log_meta.yaml  svm_meta.yaml
reports/: confusion_matrix.csv  metrics.json
src/: evaluation.py  evaluationx.py  predict_cli.py  preprocessing.py  runtime_transforms.py  train_cli.py  training.py
